--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+body {
+    font-family: var(--font-geist-sans), sans-serif;
+  }
+  
+  .antialiased {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
